fix(App): fix view

--- a/electron-quick-start/index.html
+++ b/electron-quick-start/index.html
@@ -6,11 +6,10 @@
     <link href="./index.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+    <div class="main">
+      <h1>Hello World!</h1>
+      <img src='./splash.png' />
+    </div>
   </body>
 
   <script>
